--- a/css/style.css
+++ b/css/style.css
@@ -12957,48 +12957,48 @@ html {
       font-size: 0.9rem;
       width: 90%; }
 
-.work-summary {
+.case-summary {
   display: flex;
   align-items: flex-start;
   flex-direction: column; }
-  .work-summary .work-image {
+  .case-summary .case-image {
     max-height: 400px;
     overflow: hidden; }
-    .work-summary .work-image img {
+    .case-summary .case-image img {
       max-width: 100%;
       height: auto; }
-  .work-summary .work-content {
+  .case-summary .case-content {
     flex: 1;
     padding: 20px;
     border-bottom: 2px solid #1c3ed3; }
-    .work-summary .work-content .work-title {
+    .case-summary .case-content .case-title {
       font-family: "Lato", "Helvetica Neue", Arial, sans-serif, -apple-system;
       font-size: 1.5rem; }
-    .work-summary .work-content p {
+    .case-summary .case-content p {
       color: #666;
       font-size: 0.9rem; }
 
-.page-work-single h1.title, .page-work-single .title.h1 {
+.page-case-single h1.title, .page-case-single .title.h1 {
   font-size: 3rem;
   font-family: "Lato", "Helvetica Neue", Arial, sans-serif, -apple-system;
   color: #1c3ed3; }
 
-.page-work-single .work-image img {
+.page-case-single .work-image img {
   width: 100%;
   height: auto; }
 
-.page-work-single .content > p:first-of-type {
+.page-case-single .content > p:first-of-type {
   font-size: 24px;
   line-height: 32px;
   margin-bottom: 40px;
   font-weight: 300; }
 
-.page-work-single .masonry {
+.page-case-single .masonry {
   /* Masonry container */
   column-count: 3;
   column-gap: 1em; }
 
-.page-work-single .item {
+.page-case-single .item {
   /* Masonry bricks or child elements */
   background-color: #eee;
   margin: 0 0 1em; }
@@ -13008,5 +13008,8 @@ html {
 
 .hero-image .hero-text p {
   line-height: 2.45rem; }
+
+ol {
+  list-style: number; }
 
 /*# sourceMappingURL=style.css.map */
