--- a/css/style.css
+++ b/css/style.css
@@ -12983,7 +12983,7 @@ html {
   font-family: "Lato", "Helvetica Neue", Arial, sans-serif, -apple-system;
   color: #1c3ed3; }
 
-.page-case-single .work-image img {
+.page-case-single .case-image img {
   width: 100%;
   height: auto; }
 
