--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Lato:400|Open+Sans:400,700");
 /*!
    * Bootstrap  v5.3.0 (https://getbootstrap.com/)
@@ -13003,8 +13004,29 @@ html {
   background-color: #eee;
   margin: 0 0 1em; }
 
+:root {
+  font-size: 1.114em; }
+
+h1, .h1 {
+  font-size: 2.6rem; }
+
+h2, .h2 {
+  font-size: 2.2rem; }
+
+h3, .h3 {
+  font-size: 1.56rem; }
+
+h4, .h4 {
+  font-size: 1.4rem; }
+
+h5, .h5 {
+  font-size: 1.2rem; }
+
+h6, .h6 {
+  font-size: 1.14rem; }
+
 .main-menu > ul > li {
-  font-size: 1.147rem; }
+  font-size: 1.232rem; }
 
 @media (max-width: 767px) {
   .pconly-bg {
@@ -13015,5 +13037,24 @@ html {
 
 ol {
   list-style: number; }
+
+.page-services-single .content > p:first-of-type {
+  font-size: 1.14rem; }
+
+.page-case-single .content > p:first-of-type {
+  font-size: 1.8rem; }
+
+.service-list {
+  width: 100%;
+  /* 或者指定你需要的具体宽度，例如 80% */
+  max-width: 100%;
+  /* 确保最大宽度不超过父容器 */
+  position: sticky;
+  top: 20px;
+  /* 根据需要调整 */
+  box-shadow: -10px 0 5px rgba(50, 50, 93, 0.2);
+  padding-left: 30px; }
+  .service-list p {
+    font-size: 0.87rem; }
 
 /*# sourceMappingURL=style.css.map */
