--- a/css/style.css
+++ b/css/style.css
@@ -13058,7 +13058,7 @@ h6, .h6 {
   font-size: 2.1rem; }
 
 .hero-image .hero-text p {
-  font-size: 1.114em;
+  font-size: 1.16rem;
   line-height: 1.9rem; }
 
 /*# sourceMappingURL=style.css.map */
